# recipes.riceprower.com

./: .docker.env-tpl  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CNAME  Dockerfile  Gemfile  LICENSE  Makefile  Pipfile  README.md  README.rst  _config.yml  _config_dev.yml  docker-compose.override.yml  docker-compose.yml  fabfile.py  fabric.yml.template  gunicorn.conf.py  help.sh  index.md  launch.bash  mkdocs.yml  pyproject.toml  recipe_list.html  recipes.md  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
_includes/: footer.html  header.html  recipe_breadcrumb.html  recipe_list_card.html  recipe_search_item.html  searchbox.html
_layouts/: default.html  recipe.html
_plugins/: recipes-lastmod-hook.rb
_recipe/: a_big_casserole.md
_recipes/: buffalo_wing_sauce.md  chicken_corn_chowder.md  chili_con_carne.md  curry_stand_chicken_tikka_masala.md  kansas_city_ribs.md  tantalizingly_tangy_meatloaf.md
docs/: .authors.yml  docker-compose-stuff.md  index.md  recipe-detail-styling.md  reversing-django-admin-urls.md  vscode-recommended-tooling.md
hometools/: .env.template  LICENSE  generate_env.py
includes/: abbreviations.md
js_toolchain/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
js_tools/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
nginx/: README.md  nginx.conf
overrides/: blog-post.html  recipe.html
recipes/: buffalo_wing_sauce.md  crispy_orange_beef_stir_fry.md  curry_stand_chicken_tikka_masala.md
recipesite/: manage.py
scripts/: clear_algolia_index.rb  django-cmd.sh  django-manage.sh  djangomanage.sh  docker-compose-cmd.sh  gen_recipes.py  rebuild-images.sh  rebuild-npm.sh  rebuild_images.sh  restart.sh  start.sh  (+4 more)
(+255 files in other folders)
