[tool.poetry]
name = "recipes-riceprower-com"
version = "0.1.0"
description = "A collection of recipes made in the Rice-Prower home, and associated nerdy tools"
authors = ["Galen Rice <griceturrble@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.6"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mkdocs-git-committers-plugin-2 = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
