[tool.poetry]
name = "recipes-riceprower-com"
version = "0.1.0"
description = "A collection of recipes made in the Rice-Prower home, and associated nerdy tools"
authors = ["Galen Rice <griceturrble@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
mkdocs-git-revision-date-localized-plugin = "^1.2.9"
mkdocs-git-committers-plugin-2 = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
